# rz_convert_image

./: README.md
src/: CMakeLists.txt  resources.qrc  rz_convert_image.cpp
src/includes/: rz_config.h  rz_convert_image.hpp
